--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ readme = "README.md"
 python = "^3.11"
 streamlit = "^1.17.0"
 watchdog = "^2.2.1"
+pandas = "^1.5.3"
+numpy = "^1.24.2"
 
 
 [build-system]
