--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ numpy = "^1.24.2"
 pylint = "^2.16.1"
 
 
+[tool.poetry.group.dev.dependencies]
+autopep8 = "^2.0.1"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
