--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,12 +1,58 @@
-steps:
-  - uses: microsoft/playwright-github-action@v1
-  - name: Set up Python
-    uses: actions/setup-python@v2
-    with:
-      python-version: 3.11
-  - name: Install dependencies
-    run: poetry install
-  - name: Ensure browsers are installed
-    run: poetry run playwright install
-  - name: Run your tests
-    run: sh scripts/playwright.sh
+name: "tests"
+on:
+  pull_request:
+  push:
+    branches:
+      - main
+      - 'releases/*'
+  workflow_dispatch:
+  schedule:
+    - cron: '40 0 * * *'
+
+jobs:
+  test-linux:
+    name: Playwright@${{ matrix.playwright}} ${{ matrix.os }} headless=${{ matrix.headless }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-20.04, macos-latest, windows-latest]
+        playwright: [1.8.0, 1.12.0, 1.18.0, next, beta]
+        headless: [true, false]
+        exclude:
+          - os: ubuntu-20.04
+            playwright: 1.0.0
+          - os: ubuntu-20.04
+            playwright: 1.1.0
+          - os: ubuntu-20.04
+            playwright: 1.2.0
+          - os: ubuntu-22.04
+            playwright: 1.23
+          - os: ubuntu-22.04
+            playwright: 1.25
+          - os: ubuntu-22.04
+            playwright: next
+          - os: ubuntu-20.04
+            playwright: latest
+          - os: macos-latest
+            playwright: 1.8.0
+          - os: macos-latest
+            playwright: 1.12.0
+          - os: macos-latest
+            playwright: 1.18.0
+        include:
+          - os: ubuntu-22.04
+            playwright: next
+
+    runs-on: ${{ matrix.os }}
+    steps:
+      - uses: microsoft/playwright-github-action@v1
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.11
+      - name: Install dependencies
+        run: poetry install
+      - name: Ensure browsers are installed
+        run: poetry run playwright install
+      - name: Run your tests
+        run: sh scripts/playwright.sh
