--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   playwright-linux:
-    name: Playwright@${{ matrix.playwright}} ${{ matrix.os }} headless=${{ matrix.headless }}
+    name: test-playwright
     runs-on: ubuntu-latest
     steps:
       - uses: microsoft/playwright-github-action@v1
@@ -16,6 +16,8 @@ jobs:
         uses: actions/setup-python@v2
         with:
           python-version: 3.11
+      - name: Install poetry
+        uses: snok/install-poetry@v1
       - name: Install dependencies
         run: poetry install
       - name: Ensure browsers are installed
