--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,6 +21,10 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
+      - name: Install poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-path: ~/.cached/virtualenvs
 
       - name: Cache packages
         id: cache-poetry
@@ -41,12 +45,8 @@ jobs:
         run: poetry env list
 
       #----------------------------------------------
-      #  -----  install & configure poetry  -----
+      #  -----   install poetry packages    -----
       #----------------------------------------------
-      - name: Install poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-path: ~/.cached/virtualenvs
       - name: Install dependencies
         run: poetry install
       #----------------------------------------------
