--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,15 +24,17 @@ jobs:
       - name: Install poetry
         uses: snok/install-poetry@v1
         with:
-          virtualenvs-path: ~/.cached/virtualenvs
-
+          virtualenvs-path: ~/.cache/virtualenvs
+      #----------------------------------------------
+      #                 Load Cache
+      #----------------------------------------------
       - name: Cache packages
         id: cache-poetry
         uses: actions/cache@v3
         env:
           cache-name: cache-poetry-packages
         with:
-          path: ~/.cached
+          path: ~/.cache
           key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('poetry.lock') }}
           restore-keys: |
             ${{ runner.os }}-build-${{ env.cache-name }}-
@@ -43,7 +45,6 @@ jobs:
         name: List the state of poetry packages
         continue-on-error: true
         run: poetry env list
-
       #----------------------------------------------
       #  -----   install poetry packages    -----
       #----------------------------------------------
@@ -59,7 +60,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       #----------------------------------------------
-      #       check-out repo and set-up python
+      #             Setup environment
       #----------------------------------------------
       - uses: microsoft/playwright-github-action@v1
       - name: Check out repository
@@ -69,11 +70,33 @@ jobs:
         uses: actions/setup-python@v4
         with:
           python-version: '3.11'
-      #----------------------------------------------
-      #  -----  install & configure poetry  -----
-      #----------------------------------------------
       - name: Install poetry
         uses: snok/install-poetry@v1
+        with:
+          virtualenvs-path: ~/.cache/virtualenvs
+      #----------------------------------------------
+      #                 Load Cache
+      #----------------------------------------------
+      - name: Cache packages
+        id: cache-poetry
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-poetry-packages
+        with:
+          path: ~/.cache
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
+      
+      - if: ${{ steps.cache-poetry.outputs.cache-hit != 'true' }}
+        name: List the state of poetry packages
+        continue-on-error: true
+        run: poetry env list
+      #----------------------------------------------
+      #  -----   install poetry packages    -----
+      #----------------------------------------------
       - name: Install dependencies
         run: poetry install
       - name: Ensure browsers are installed
