--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ pandas = "^1.5.3"
 numpy = "^1.24.2"
 pylint = "^2.16.1"
 coverage = "^7.1.0"
+typer = "^0.7.0"
 
 
 [tool.poetry.group.dev.dependencies]
