--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ numpy = "^1.24.2"
 pylint = "^2.16.1"
 coverage = "^7.1.0"
 typer = "^0.7.0"
+streamlit-extras = "^0.2.6"
 
 
 [tool.poetry.group.dev.dependencies]
