--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pylint = "^2.16.1"
 coverage = "^7.1.0"
 typer = "^0.7.0"
 streamlit-extras = "^0.2.6"
+openpyxl = "^3.1.1"
 
 
 [tool.poetry.group.dev.dependencies]
