--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ coverage = "^7.1.0"
 typer = "^0.7.0"
 streamlit-extras = "^0.2.6"
 openpyxl = "^3.1.1"
+st-pages = "^0.3.2"
 
 
 [tool.poetry.group.dev.dependencies]
