--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -108,7 +108,10 @@ jobs:
       #  -----     Run PlayWright Tests     -----
       #----------------------------------------------
       - name: Run your tests
-        run: poetry run python -m tests.cli --test playwright
+        run: |
+          poetry run streamlit run src/main.py --client.showErrorDetails false --server.port 9000 --server.headless true &
+          poetry run pytest ./tests/feature/*.py
+
   pyunit:
     name: test-pyunit
     runs-on: ubuntu-latest
@@ -153,7 +156,7 @@ jobs:
       - name: Install dependencies
         run: poetry install
       #----------------------------------------------
-      #  -----     Run PlayWright Tests     -----
+      #  -----       Run PyUnit Tests       -----
       #----------------------------------------------
       - name: Run your tests
-        run: poetry run python -m tests.cli --test pyunit
+        run: poetry run python -m unittest discover -s tests.unit -p "*.py"
