--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ streamlit-extras = "^0.2.6"
 openpyxl = "^3.1.1"
 st-pages = "^0.3.2"
 asyncio = "^3.4.3"
+streamlit-aggrid = "^0.3.3"
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.1"
