--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ openpyxl = "^3.1.1"
 st-pages = "^0.3.2"
 asyncio = "^3.4.3"
 streamlit-aggrid = "^0.3.3"
+matplotlib = "^3.7.1"
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.1"
