--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,20 +12,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       #----------------------------------------------
-      #             Setup environment
-      #----------------------------------------------
-      - name: Check out repository
-        uses: actions/checkout@v3
-      - name: Set up python
-        id: setup-python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-      - name: Install poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-path: ~/.cache/virtualenvs
-      #----------------------------------------------
       #                 Load Cache
       #----------------------------------------------
       - name: Cache packages
@@ -40,11 +26,20 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-      
-      - if: ${{ steps.cache-poetry.outputs.cache-hit != 'true' }}
-        name: List the state of poetry packages
-        continue-on-error: true
-        run: poetry env list
+      #----------------------------------------------
+      #             Setup environment
+      #----------------------------------------------
+      - name: Check out repository
+        uses: actions/checkout@v3
+      - name: Set up python
+        id: setup-python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - name: Install poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-path: ~/.cache/virtualenvs
       #----------------------------------------------
       #  -----   install poetry packages    -----
       #----------------------------------------------
@@ -59,9 +54,25 @@ jobs:
           poetry run pylint tests
 
   playwright-linux:
+    needs: [lint]
     name: test-playwright
     runs-on: ubuntu-latest
     steps:
+      #----------------------------------------------
+      #                 Load Cache
+      #----------------------------------------------
+      - name: Cache packages
+        id: cache-poetry
+        uses: actions/cache@v3
+        env:
+          cache-name: cache-poetry-playwright-packages
+        with:
+          path: ~/.cache
+          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('poetry.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-build-${{ env.cache-name }}-
+            ${{ runner.os }}-build-
+            ${{ runner.os }}-
       #----------------------------------------------
       #             Setup environment
       #----------------------------------------------
@@ -78,26 +89,6 @@ jobs:
         with:
           virtualenvs-path: ~/.cache/virtualenvs
       #----------------------------------------------
-      #                 Load Cache
-      #----------------------------------------------
-      - name: Cache packages
-        id: cache-poetry
-        uses: actions/cache@v3
-        env:
-          cache-name: cache-poetry-playwright-packages
-        with:
-          path: ~/.cache
-          key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('poetry.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-build-${{ env.cache-name }}-
-            ${{ runner.os }}-build-
-            ${{ runner.os }}-
-      
-      - if: ${{ steps.cache-poetry.outputs.cache-hit != 'true' }}
-        name: List the state of poetry packages
-        continue-on-error: true
-        run: poetry env list
-      #----------------------------------------------
       #  -----   install poetry packages    -----
       #----------------------------------------------
       - name: Install dependencies
@@ -110,23 +101,10 @@ jobs:
       - name: Run your tests
         run: poetry run python -m tests.cli --test playwright
   pyunit:
+    needs: [lint]
     name: test-pyunit
     runs-on: ubuntu-latest
     steps:
-      #----------------------------------------------
-      #             Setup environment
-      #----------------------------------------------
-      - name: Check out repository
-        uses: actions/checkout@v3
-      - name: Set up python
-        id: setup-python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.11'
-      - name: Install poetry
-        uses: snok/install-poetry@v1
-        with:
-          virtualenvs-path: ~/.cache/virtualenvs
       #----------------------------------------------
       #                 Load Cache
       #----------------------------------------------
@@ -142,11 +120,20 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-      
-      - if: ${{ steps.cache-poetry.outputs.cache-hit != 'true' }}
-        name: List the state of poetry packages
-        continue-on-error: true
-        run: poetry env list
+      #----------------------------------------------
+      #             Setup environment
+      #----------------------------------------------
+      - name: Check out repository
+        uses: actions/checkout@v3
+      - name: Set up python
+        id: setup-python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.11'
+      - name: Install poetry
+        uses: snok/install-poetry@v1
+        with:
+          virtualenvs-path: ~/.cache/virtualenvs
       #----------------------------------------------
       #  -----   install poetry packages    -----
       #----------------------------------------------
