--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ autohooks = "^23.1.0"
 autohooks-plugin-pylint = "^22.8.1"
 playwright = "^1.30.0"
 pytest-playwright = "^0.3.0"
+pre-commit = "^3.1.1"
 
 [tool.autohooks]
 mode = "poetry"
