--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,7 +3,7 @@ repos:
   hooks:
     - id: pylint
       name: pylint
-      entry: poetry run pylint
+      entry: poetry run pylint src
       language: system
       types: [python]
       args:
