--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Install dependencies
         run: poetry install
       - name: Ensure browsers are installed
-        run: poetry run playwright install
+        run: poetry run playwright install --with-deps
       #----------------------------------------------
       #  -----     Run PlayWright Tests     -----
       #----------------------------------------------
