--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,8 +19,7 @@ streamlit-extras = "^0.2.6"
 openpyxl = "^3.1.1"
 st-pages = "^0.3.2"
 asyncio = "^3.4.3"
-xmlsec = "^1.3.13"
-python3-saml = "^1.15.0"
+office365-rest-python-client = "^2.4.0"
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.1"
