fix: Merge conflicts

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,8 @@ streamlit-extras = "^0.2.6"
 openpyxl = "^3.1.1"
 st-pages = "^0.3.2"
 asyncio = "^3.4.3"
+streamlit-aggrid = "^0.3.3"
+matplotlib = "^3.7.1"
 office365-rest-python-client = "^2.4.0"
 extra-streamlit-components = "^0.1.56"
 
@@ -28,6 +30,7 @@ autohooks = "^23.1.0"
 autohooks-plugin-pylint = "^22.8.1"
 playwright = "^1.30.0"
 pytest-playwright = "^0.3.0"
+pre-commit = "^3.1.1"
 
 [tool.autohooks]
 mode = "poetry"
