--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ st-pages = "^0.3.2"
 asyncio = "^3.4.3"
 streamlit-aggrid = "^0.3.3"
 matplotlib = "^3.7.1"
+python-dotenv = "^1.0.0"
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.1"
