--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ streamlit-aggrid = "^0.3.3"
 matplotlib = "^3.7.1"
 office365-rest-python-client = "^2.4.0"
 extra-streamlit-components = "^0.1.56"
+poetry-dotenv = "^0.3.0"
 
 [tool.poetry.group.dev.dependencies]
 autopep8 = "^2.0.1"
