--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ streamlit-aggrid = "^0.3.3"
 matplotlib = "^3.7.1"
 fuzzywuzzy = "^0.18.0"
 python-dotenv = "^1.0.0"
+python-levenshtein = "^0.20.9"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.16.1"
