--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ matplotlib = "^3.7.1"
 fuzzywuzzy = "^0.18.0"
 python-dotenv = "^1.0.0"
 python-levenshtein = "^0.20.9"
+xlwt = "^1.3.0"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.16.1"
