update .env.example with sharepoint related

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,6 @@
 # Browser to use for Playwright tests (chromium|webkit|firefox)
 BROWSER=firefox
+# Share point test credentials
+HAWK_ID=
+HAWK_ID_PASSWORD=
+SHAREPOINT_URL=
