--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -68,6 +68,10 @@ jobs:
       #  -----     Run PlayWright Tests     -----
       #----------------------------------------------
       - name: Run your tests
+        env:
+          HAWK_ID: ${{ secrets.HAWK_ID }}
+          HAWK_ID_PASSWORD: ${{ secrets.HAWK_ID_PASSWORD }}
+          SHAREPOINT_URL: ${{ secrets.SHAREPOINT_URL }}
         run: poetry run python -m tests.cli --test playwright
   pyunit:
     needs: [lint]
