--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Directory used by application runtime to store temp files.
+.app_data
+
 # Created by https://www.toptal.com/developers/gitignore/api/python,macos,windows,linux
 # Edit at https://www.toptal.com/developers/gitignore?templates=python,macos,windows,linux
 .python-version
