--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Run PyLint
         run: |
           poetry run pylint src
+          poetry run pylint tests
 
   playwright-linux:
     needs: [lint]
