--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ fuzzywuzzy = "^0.18.0"
 python-dotenv = "^1.0.0"
 python-levenshtein = "^0.20.9"
 xlwt = "^1.3.0"
+streamlit-ace = "^0.1.1"
 
 [tool.poetry.group.dev.dependencies]
 pylint = "^2.16.1"
