--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -74,7 +74,7 @@ jobs:
       - name: Ensure browsers are installed
         run: poetry run playwright install --with-deps
       #----------------------------------------------
-      #  -----     Create .evn file             -----
+      #  -----     Create .env file             -----
       #----------------------------------------------
       - name: Create .evn file
         run: |
@@ -82,7 +82,7 @@ jobs:
           echo BROWSER=firefox >> .env
           echo HAWK_ID=${{ secrets.HAWK_ID }} >> .env
           echo HAWK_ID_PASSWORD=${{ secrets.HAWK_ID_PASSWORD }} >> .env
-          echo SHAREPOINT_URL=${{ secrets.SHAREPOINT_URL }}
+          echo SHAREPOINT_URL=${{ secrets.SHAREPOINT_URL }} >> .env
       #----------------------------------------------
       #  -----     Run PlayWright Tests     -----
       #----------------------------------------------
