fix: updated dependencies, fixed GitHub action spelling mistake

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -76,7 +76,7 @@ jobs:
       #----------------------------------------------
       #  -----     Create .env file             -----
       #----------------------------------------------
-      - name: Create .evn file
+      - name: Create .env file
         run: |
           touch .env
           echo BROWSER=firefox >> .env
