--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Remove requirements.txt in favor of poetry.lock, requirements.txt is an artifact of the building process
+requirements.txt
+
 # Playwright test results
 test-results/
 
