--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,11 @@ run = "poetry run streamlit run scholarship_app/app.py"
 test-e2e = "sh scripts/playwright.sh"
 test-unit = "sh scripts/pyunit.sh"
 test = "sh scripts/test.sh"
+build = [
+  { cmd = "poetry export -f requirements.txt --output requirements.txt" },
+  { cmd = "poetry run pyoxidizer build" },
+  { cmd = "rm ./requirements.txt" },
+]
 
 [tool.poetry.dependencies]
 python = "^3.10"
