--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,9 @@ license = "MIT"
 readme = "README.md"
 
 [tool.poe.tasks]
+run = "python -m scholarship_app"
 run-server = "poetry run streamlit run scholarship_app/router.py"
+lint = "sh scripts/lint.sh"
 test-e2e = "sh scripts/playwright.sh"
 test-unit = "sh scripts/pyunit.sh"
 test = "sh scripts/test.sh"
