--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -116,6 +116,16 @@ jobs:
       - name: Install dependencies
         run: poetry install
       #----------------------------------------------
+      #  -----     Create .env file             -----
+      #----------------------------------------------
+      - name: Create .env file
+        run: |
+          touch .env
+          echo BROWSER=firefox >> .env
+          echo HAWK_ID=${{ secrets.HAWK_ID }} >> .env
+          echo HAWK_ID_PASSWORD=${{ secrets.HAWK_ID_PASSWORD }} >> .env
+          echo SHAREPOINT_URL=${{ secrets.SHAREPOINT_URL }} >> .env
+      #----------------------------------------------
       #  -----       Run PyUnit Tests       -----
       #----------------------------------------------
       - name: Run your tests
