make workflow dependent on each other

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,7 +41,8 @@ jobs:
           poetry run pylint tests
 
   playwright-linux:
-    needs: [lint]
+    needs: [lint, pyunit]
+    depe
     name: test-playwright
     runs-on: ubuntu-latest
     steps:
