--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,8 +35,8 @@ jobs:
       #----------------------------------------------
       - name: Run PyLint
         run: |
-          echo "src/:"
-          poetry run pylint src
+          echo "scholarship_app/:"
+          poetry run pylint scholarship_app
           echo "tests/:"
           poetry run pylint tests
 
